--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,5 +10,5 @@ spring:
 
 
 region: us-east-1
-writeRedisUrl: redis://default:nKICaoVYAoZCgjKHvUGRGCLzaqhxuCve@autorack.proxy.rlwy.net:33891
-readRedisUrl: redis://default:abc@autorack.proxy.rlwy.net:33891
+writeRedisUrl: redis.railway.internal
+readRedisUrl: redis.railway.internal
