testing enviroment variables v3

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,6 @@ spring:
 
 
 region: us-east-1
-writeRedisUrl: ${{ Redis.REDIS_URL }}
-readRedisUrl: ${{ Redis.REDIS_URL }}
+writeRedisUrl: ${Redis.REDIS_URL}
+readRedisUrl: ${Redis.REDIS_URL}
 dynamoDBUrl: http://dynamodb.railway.internal
