--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,3 +1,3 @@
 writeRedisUrl: ${Redis.REDIS_URL}
 readRedisUrl: ${Redis.REDIS_URL}
-dynamoDBUrl: http://dynamodb.railway.internal
+dynamoDBUrl: http://dynamodb-production.up.railway.app
